--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,7 +6,7 @@
   font-family: sans-serif;
   --col-active: #4646462c;
   --color-header: white;
-  --colorMiNav: white;
+  --colorMiNav: rgb(230, 115, 115);
 }
 
 body {
