--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,11 +5,12 @@
 :root {
   font-family: sans-serif;
   --col-active: #4646462c;
-  --color-header: white;
-  --colorMiNav: rgb(230, 115, 115);
+  --color-header: rgb(67, 126, 65);
+  --colorMiNav: rgb(71, 36, 36);
 }
 
 body {
+  font-family: 'Century Gothic';
   max-width: 640px;
   margin: 0 auto;
   padding: 0.5rem;
